<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingHorizontal="0dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_chevron_left"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:text="@string/account"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/activity_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/edit_password_caption"
            android:textColor="@color/bf_grayDark"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/current_password_field"
            style="@style/input_field"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/new_password_field"
            style="@style/input_field"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/confirm_new_password_field"
            style="@style/input_field"
            android:layout_width="350dp"
            android:layout_height="52dp"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>