<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingHorizontal="0dp"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_chevron_left"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:text="@string/account"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/purple_700"
            android:textSize="16sp"
            android:gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:layout_below="@id/TopBar">


        <TextView
            android:id="@+id/activity_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/edit_email_caption"
            android:textColor="@color/bf_grayDark"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/email_field"
            style="@style/input_field"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/activity_caption"
            android:layout_marginTop="12dp"
            android:gravity="center|left"
            android:hint="@string/email"
            android:textSize="16dp" />

        <Button
            android:id="@+id/submitBtnEmail"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/email_field"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>